--- a/frontend/src/app/component/page/page.component.html
+++ b/frontend/src/app/component/page/page.component.html
@@ -2,5 +2,5 @@
 <div fxLayoutWrap class="page-container">  
   <div fxFlex="36px" class="page-sider">menu</div>
   <div fxFlex="220px" class="page-list">list</div>
-  <div fxFlex="1"><router-outlet> </router-outlet></div>
+  <div fxFlex><router-outlet> </router-outlet></div>
 </div>
